# django-weather-ecs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ecr_deploy.yaml  ecs_deploy.yaml  terraform_deploy.yaml
deploy/: ecs_task.json
deploy/terraform/: certs.tf  cloudwatch.tf  ecr.tf  ecs.tf  main.tf  route53.tf  vpc.tf
djangoweather/: manage.py  pyproject.toml
djangoweather/djangoweather/: asgi.py  settings.py  urls.py  wsgi.py
djangoweather/gunicorn/: gunicorn_config.py
djangoweather/requirements/: dev.txt  prod.txt
djangoweather/scripts/: run_django.sh
djangoweather/weather/: urls.py  views.py
djangoweather/weather/static/weather/css/: weather.css
djangoweather/weather/static/weather/js/: app.js
djangoweather/weather/templates/weather/: base.html  home.html  weather_data.html
docker/grafana/: Dockerfile  grafana.ini
docker/grafana/datasources/: datasources.yml
docker/nginx/: Dockerfile  default.conf  default.conf.tpl  run_nginx.sh
docker/prometheus/: Dockerfile  prometheus.rules.yml  prometheus.yml
