[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "djangoweather"
version = "0.1"
description = "Django weather app deployed on Kubernetes"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "Django==5.0.2",
    "psycopg2==2.9.9",
    "gunicorn==21.2.0",
    "django-prometheus==2.3.1",
    "requests",
    "django-storages",
    "boto3",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
]

[tool.pip-tools]
generate-hashes = true
